# cartola

./: Makefile  Pipfile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: make_dataset.py
src/features/: build_features.py
