[tool.poetry]
name = "cartola"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
bs4 = "^0.0.1"
jupyter = "^1.0.0"
notebook = "^6.1.4"
requests = "^2.24.0"
plotly = "^4.11.0"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]
numpy = "^1.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
